2011-03-09  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: resource errors are not reported before front-end is opened
        https://bugs.webkit.org/show_bug.cgi?id=55939

        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::didReceiveResourceResponseImpl):
        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::didReceiveResourceResponse):
        (WebCore::InspectorInstrumentation::didFailLoading):


Canonical link: https://commits.webkit.org/70530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80639 268f45cc-cd09-0410-ab3c-d52691b4dbfc